# taxi_server

./: client.cpp  server.cpp
client/: CMakeLists.txt
client/header/: client.h
client/src/: client.cpp  client_function.cpp
server/: CMakeLists.txt
server/header/: route.h  server.h
server/src/: add_log.cpp  arrive.cpp  create_log.cpp  get_address.cpp  get_moscow_time.cpp  handle_client.cpp  handle_driver.cpp  handle_passenger.cpp  make_route.cpp  manipulate.cpp  server.cpp  start_accept.cpp
